# Optiv

./: Dockerfile  README.md  docker-compose.yml  gitignore  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
docs/: API.md
src/api/: app.py
src/core/: anonymizer.py  document_processor.py  logo_detector.py  ocr_engine.py  pii_detector.py
src/ui/: streamlit_app.py
src/utils/: config.py
